# b2b-custom-allocators

./: .gitignore  CMakeLists.txt  README.md
src/: allocator  allocator.cpp
src/1_introduction/: 00_new_and_delete  00_new_and_delete.cpp  01_in_memory.cpp  02_pointers.cpp  missaligned-vs-aligned  missaligned-vs-aligned.cpp  padding-alignment  padding-alignment.cpp  raii-instead.cpp
src/2_std_allocator/: 01_basic  01_basic_17.cpp  02_basic_after_20  02_basic_after_20.cpp
src/3_pooling/: arena-vs-pool  arena-vs-pool.cpp  pool-allocator-comparisons  pool-allocator-comparisons.cpp  pool-test.cpp  pool-vs-standard.cpp  pooling-allocator-v2.cpp  pooling-allocator-with-rebind.cpp  pooling-allocator.cpp  simple-pool-allocator-manual.cpp  simple-pool-allocator.cpp  tracking-pool-allocator  tracking-pool-allocator.cpp
src/4_custom_allocator/: Stack and arena-based memory allocators .sty  pmr-allocator  pooling-allocator  scratchpad.txt
src/4_stack/: basic_stack  basic_stack.cpp  basic_stack_traits.cpp
src/8_pmr/: pmr-allocator.cpp
